// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Wrapper Component should render correctly using default props 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  cursor: pointer;
  width: 100%;
  height: 100%;
}

<div
  className="c0"
>
  Content
</div>
`;

exports[`Wrapper Component should render correctly using specific props 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  cursor: pointer;
  width: 200px;
  height: 100px;
}

<div
  className="c0"
  height={100}
  width={200}
>
  Content
</div>
`;
